go/fiber/k8s-manifests/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gofiber
  namespace: sampleapps
  labels:
    app: gofiber
spec:
  path: /devices
  to:
    kind: Service
    name: gofiber
    weight: 100
  port:
    targetPort: gofiber-service
